# andromeda-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  rustfmt.toml
.github/workflows/: build.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: driver.rs  lib.rs  main.rs  renderer.rs  window.rs
crates/assets/: Cargo.toml
crates/assets/src/: asset.rs  handle.rs  lib.rs  storage.rs
crates/assets/src/resources/: height_map.rs  heightmap.rs  mod.rs  normal_map.rs  terrain.rs  terrain_plane.rs  texture.rs
crates/assets/src/texture/: buffer.rs  format.rs  loader.rs  mod.rs  pixel.rs
crates/brush/: Cargo.toml
crates/brush/src/: lib.rs  util.rs
crates/brush/src/brushes/: color.rs  equalize.rs  height.rs  mod.rs
crates/camera/: Cargo.toml
crates/camera/src/: camera.rs  lib.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/gfx/: Cargo.toml
crates/gfx/src/: lib.rs  state.rs
crates/gfx/src/util/: mod.rs  paired_image_view.rs  sampler.rs  staging_buffer.rs  upload.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/gui/src/editor/: brushes.rs  camera_controller.rs  environment.rs  mod.rs  performance.rs  render_options.rs  terrain_options.rs  world_view.rs
crates/gui/src/util/: image.rs  image_provider.rs  mod.rs  mouse_position.rs  size.rs
crates/gui/src/widgets/: aligned_label.rs  drag.rs  mod.rs  resizable_image.rs  toolbar.rs
crates/hot_reload/: Cargo.toml
crates/hot_reload/src/: dynamic_pipeline_builder.rs  file_watcher.rs  lib.rs
crates/inject/: Cargo.toml
crates/inject/src/: lib.rs  storage.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/pass/: Cargo.toml
crates/pass/src/: graph.rs  lib.rs  pass.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs  ui_integration.rs  world_renderer.rs
crates/renderer/src/passes/: atmosphere.rs  mod.rs  terrain.rs  terrain_decal.rs  world_position.rs
crates/renderer/src/postprocess/: tonemap.rs
crates/renderer/src/util/: graph.rs  macros.rs  mod.rs  targets.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: bus.rs  caller.rs  event.rs  handler.rs  lib.rs  system.rs
crates/statistics/: Cargo.toml
crates/statistics/src/: lib.rs
crates/thread/: Cargo.toml
crates/thread/src/: io.rs  lib.rs  promise.rs  promised_value.rs
crates/time/: Cargo.toml
crates/time/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: byte_size.rs  file_type.rs  lib.rs  lock.rs  mouse_position.rs  ring_buffer.rs  safe_error.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  render_options.rs  world.rs
shaders/include/: color_space.hlsl  decal.hlsl
shaders/src/: atmosphere.fs.hlsl  blur_brush.cs.hlsl  blur_rect.cs.hlsl  brush_decal.fs.hlsl  decal.fs.hlsl  decal.vs.hlsl  fullscreen.vert.hlsl  fullscreen.vs.hlsl  height_brush.cs.hlsl  height_brush_decal.fs.hlsl  normal_recompute.cs.hlsl  resolve.frag.hlsl  simple_mesh.vert.hlsl  simple_mesh.vs.hlsl  solid_color.frag.glsl  solid_color.frag.hlsl  solid_color.fs.hlsl  terrain.dom.hlsl  terrain.ds.hlsl  terrain.frag.hlsl  terrain.fs.hlsl  terrain.hs.hlsl  terrain.hull.hlsl  terrain.vert.hlsl  terrain.vs.hlsl  terrain_normals.comp.hlsl  terrain_normals.cs.hlsl  tonemap.frag.hlsl  tonemap.fs.hlsl  world_pos.cs.hlsl
src/: driver.rs  main.rs  repaint.rs
src/app/: actors.rs  driver.rs  input.rs  mod.rs  renderer.rs  repaint.rs  update_loop.rs  window.rs
src/core/: bus.rs  byte_size.rs  caller.rs  event.rs  handler.rs  input.rs  mod.rs  safe_error.rs  subsystem.rs  system.rs
src/gfx/: alloc_wrapper.rs  graph.rs  mod.rs  paired_image_view.rs  targets.rs  world.rs  world_renderer.rs
src/gfx/passes/: atmosphere.rs  mod.rs  terrain.rs
src/gfx/postprocess/: mod.rs  resolve.rs  tonemap.rs
src/gfx/renderer/: mod.rs  statistics.rs  world_renderer.rs
src/gfx/renderer/passes/: atmosphere.rs  mod.rs  terrain.rs
src/gfx/renderer/postprocess/: mod.rs  tonemap.rs
src/gfx/resource/: deferred_delete.rs  height_map.rs  mod.rs  normal_map.rs  terrain.rs  terrain_plane.rs  texture.rs
src/gfx/util/: graph.rs  mod.rs  paired_image_view.rs  sampler.rs  staging_buffer.rs  targets.rs  upload.rs
src/gui/: async_actor_widget.rs  camera_controller.rs  drag.rs  drag3.rs  image.rs  image_provider.rs  integration.rs  mod.rs  size.rs
src/gui/editor/: camera_controller.rs  environment.rs  mod.rs  performance.rs  render_options.rs  terrain_options.rs  world_view.rs
src/gui/util/: format.rs  image.rs  image_provider.rs  integration.rs  mod.rs  size.rs
src/gui/widgets/: aligned_label.rs  async_actor_widget.rs  drag.rs  mod.rs  resizable_image.rs
src/hot_reload/: dynamic_pipeline_builder.rs  file_watcher.rs  mod.rs
src/math/: mod.rs  types.rs
src/state/: atmosphere.rs  camera.rs  mod.rs  world.rs
src/thread/: io.rs  mod.rs  promise.rs  promised_value.rs
src/util/: file_type.rs  mod.rs  ring_buffer.rs  safe_error.rs
