[package]
name = "andromeda"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "crates/scheduler",
    "crates/app",
    "crates/camera",
    "crates/math",
    "crates/hot_reload",
    "crates/util",
    "crates/thread",
    "crates/world",
    "crates/input",
    "crates/inject",
    "crates/gui",
    "crates/renderer",
    "crates/events",
    "crates/assets",
    "crates/gfx",
    "crates/statistics"
]

[[bin]]
name = "andromeda"
path = "crates/app/main.rs"

[profile.release-with-debug]
inherits = "release"
debug = true

# image is slow as fuck lol
[profile.dev.package.image]
opt-level = 3