[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
anyhow = "1.0.70"
glam = "0.24.0"
winit = "0.28.3"
derivative = "2.2.0"
futures = "0.3.28"
pretty_env_logger = "0.4.0"
tokio = { version = "1.27.0", features = ["full"] }
phobos = { git = "https://github.com/NotAPenguin0/phobos-rs", features = ["hlsl", "rayon"] }
egui = "0.21.0"
console-subscriber = { version = "0.1.8", optional = true }

world = { path = "../world" }
renderer = { path = "../renderer" }
gui = { path = "../gui" }
scheduler = { path = "../scheduler" }
inject = { path = "../inject" }
assets = { path = "../assets" }
gfx = { path = "../gfx" }
hot_reload = { path = "../hot_reload" }
input = { path = "../input" }
camera = { path = "../camera" }
events = { path = "../events" }
math = { path = "../math" }
statistics = { path = "../statistics" }
util = { path = "../util" }
pass = { path = "../pass" }
brush = { path = "../brush" }

[features]
log-read-locks = ["util/log-read-locks"]
log-write-locks = ["util/log-write-locks"]
time-locks = ["util/time-locks"]
log-lock-backtrace = ["util/log-lock-backtrace"]
log-locks = ["log-read-locks", "log-write-locks"]
tokio-tracing = ["tokio/tracing", "dep:console-subscriber"]