[package]
name = "brush"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
glam = "0.24.0"
anyhow = "1.0.70"
tokio = "1.28.0"
phobos = { git = "https://github.com/NotAPenguin0/phobos-rs", features = ["hlsl", "rayon"] }
enum_dispatch = "0.3.11"
events = { path = "../events" }
pass = { path = "../pass" }
gfx = { path = "../gfx" }
inject = { path = "../inject" }
scheduler = { path = "../scheduler" }
assets = { path = "../assets" }
world = { path = "../world" }
util = { path = "../util" }
hot_reload = { path = "../hot_reload" }