[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.24.0"
anyhow = "1.0.70"
egui = "0.21.0"
log = "0.4.17"
strum = "0.24.1"
strum_macros = "0.24.3"
enum_dispatch = "0.3.11"
input = { path = "../input" }
inject = { path = "../inject" }
math = { path = "../math" }
scheduler = { path = "../scheduler" }
camera = { path = "../camera" }
world = { path = "../world" }
assets = { path = "../assets" }
util = { path = "../util" }
statistics = { path = "../statistics" }
events = { path = "../events" }
brush = { path = "../brush" }
