[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
phobos = { git = "https://github.com/NotAPenguin0/phobos-rs", features = ["hlsl", "rayon", "fsr2"] }
anyhow = "1.0.70"
glam = "0.24.0"
winit = "0.28.3"
derivative = "2.2.0"
egui = "0.21.0"
concat-idents = "1.1.4"
egui-winit-phobos = { git = "https://github.com/NotAPenguin0/egui-winit-phobos" }
assets = { path = "../assets" }
camera = { path = "../camera" }
events = { path = "../events" }
inject = { path = "../inject" }
scheduler = { path = "../scheduler" }
hot_reload = { path = "../hot_reload" }
gfx = { path = "../gfx" }
pass = { path = "../pass" }
gui = { path = "../gui" }
world = { path = "../world" }
util = { path = "../util" }
statistics = { path = "../statistics" }
time = { path = "../time" }