[package]
name = "thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
poll-promise = { version = "0.2.0", features = ["tokio"] }
tokio = { version = "1.27.0", features = ["full"] }
rayon = "1.7.0"
phobos = { git = "https://github.com/NotAPenguin0/phobos-rs", features = ["rayon"] }
log = "0.4.17"