[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
glam = "0.24.0"
tokio = { version = "1.28.0", features = ["full"] }

[features]
log-read-locks = []
log-write-locks = []
time-locks = []
log-lock-backtrace = ["time-locks"]
log-locks = ["log-read-locks", "log-write-locks"]
